@startuml

title __LOGIN's Class Diagram__\n

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoggedInUserView {
          - displayName : String
          ~ LoggedInUserView()
          ~ getDisplayName()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoginActivity {
          {static} # ACTIVITY_NAME : String
          {static} ~ KEY_PASS : String
          {static} ~ KEY_USER : String
          # onCreate()
          # onDestroy()
          # onPause()
          # onResume()
          # onStart()
          # onStop()
          - showLoginFailed()
          - updateUiWithUser()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoginFormState {
          - isDataValid : boolean
          - passwordError : Integer
          - usernameError : Integer
          ~ LoginFormState()
          ~ LoginFormState()
          ~ getPasswordError()
          ~ getUsernameError()
          ~ isDataValid()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoginResult {
          - error : Integer
          ~ LoginResult()
          ~ LoginResult()
          ~ getError()
          ~ getSuccess()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoginViewModel {
          - loginFormState : MutableLiveData<LoginFormState>
          - loginResult : MutableLiveData<LoginResult>
          + login()
          + loginDataChanged()
          ~ LoginViewModel()
          ~ getLoginFormState()
          ~ getLoginResult()
          - isPasswordValid()
          - isUserNameValid()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace ui.login {
      class com.example.androidassignments.ui.login.LoginViewModelFactory {
          + create()
      }
    }
  }
  

  com.example.androidassignments.ui.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.ui.login.LoginActivity o-- com.example.androidassignments.databinding.ActivityLoginBinding : binding
  com.example.androidassignments.ui.login.LoginActivity o-- com.example.androidassignments.ui.login.LoginViewModel : loginViewModel
  com.example.androidassignments.ui.login.LoginResult o-- com.example.androidassignments.ui.login.LoggedInUserView : success
  com.example.androidassignments.ui.login.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.androidassignments.ui.login.LoginViewModel o-- com.example.androidassignments.data.LoginRepository : loginRepository
  com.example.androidassignments.ui.login.LoginViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
